# jvman

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.zh-CN.md
.github/workflows/: release.yml
installer/: environment.c  environment.h  files.c  files.h  installer.manifest  installer.rc  lang.c  lang.h  pack_setup.c  package.c  package.h  pathlist.c  pathlist.h  resource.h  setup.c
resources/: jvman.manifest  jvman.rc
src/: common.h  discovery.c  discovery.h  download_source.c  download_source.h  env_persist.c  env_persist.h  i18n.c  i18n.h  main.c  manager.c  manager.h  platform.c  platform.h  rc_writer.c  rc_writer.h  sha256.c  sha256.h  update.c  update.h  util.c  util.h
tests/: test_cli.ps1  test_cli.sh  test_installer.ps1  test_installer_data_cleanup.c  test_installer_package.c  test_installer_pathlist.c  test_lang.c  test_unit.c  test_update.c  test_update_flow.c  test_update_helper.c  test_update_helper.ps1  test_update_helper.sh
